feat: implement page Payment structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,23 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.6);
+
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  transition: all 0.5s ease-in-out;
+  background-color: rgb(126, 123, 123);
+}
